COH_QA/force-app/main/default/objects/Carousel_Slides__c/Carousel_Slides__c.object-meta.xml
<CustomObject>
    <label>Carousel Slide</label>
    <nameField>
        <displayFormat>CSLIDE-{0000}</displayFormat>
        <label>Carousel Slides Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carousel Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>