COH_QA/force-app/main/default/objects/Carousel_Slides__c/fields/Carousel__c.field-meta.xml
<CustomField>
    <fullName>Carousel__c</fullName>
    <label>Carousel</label>
    <referenceTo>Carousel__c</referenceTo>
    <relationshipLabel>Carousel Slides</relationshipLabel>
    <relationshipName>Carousel_Slides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>