COH_QA/force-app/main/default/objects/Carousel_Slides__c/fields/Carousel_Slide_Name__c.field-meta.xml
<CustomField>
    <fullName>Carousel_Slide_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carousel Slide Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>