COH_QA/force-app/main/default/objects/Carousel_Slides__c/fields/Slide_Order__c.field-meta.xml
<CustomField>
    <fullName>Slide_Order__c</fullName>
    <label>Slide Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>